--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Setareh Babajani</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,8 +17,9 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">Top</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#skill">Skills</a></li>
+					<li><a href="#work">Projects</a></li>
+					<li><a href="#portfolio">Certificates</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -28,14 +29,16 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/my-img.jpg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. I'm <strong>Jane Doe</strong>.</h1>
+								<h1>Hi. I'm <strong>Setareh Babajani</strong>.</h1>
 							</header>
-							<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
+							<p>Welcome to my personal website! I am a dedicated student at the Iran University of Science and Technology, currently maintaining a stellar GPA of <strong>3.98/4.0</strong> (<strong>18.3/20.0</strong> on the Iranian Scale). In my last two years, I have achieved a perfect GPA of <strong>4.0/4.0</strong> (<strong>18.5/20.0</strong> on the Iranian Scale).</p>
+							<p>I have a passion for collaboration and research, always eager to explore new ideas and innovations. My academic journey has been driven by curiosity and a commitment to excellence, which I bring into every project I undertake.</p>
+							<p>Feel free to explore my site to learn more about my academic achievements, skills, and collaborative efforts.</p>
+							<a href="CV_Setareh_Babajani.pdf" download="Setareh_Babajani.pdf">Download my CV</a>
 						</div>
 					</div>
 				</div>
