--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/my-img.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/my-img2.jpg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
@@ -38,7 +38,7 @@
 							<p>Welcome to my personal website! I am a dedicated student at the Iran University of Science and Technology, currently maintaining a stellar GPA of <strong>3.98/4.0</strong> (<strong>18.3/20.0</strong> on the Iranian Scale). In my last two years, I have achieved a perfect GPA of <strong>4.0/4.0</strong> (<strong>18.5/20.0</strong> on the Iranian Scale).</p>
 							<p>I have a passion for collaboration and research, always eager to explore new ideas and innovations. My academic journey has been driven by curiosity and a commitment to excellence, which I bring into every project I undertake.</p>
 							<p>Feel free to explore my site to learn more about my academic achievements, skills, and collaborative efforts.</p>
-							<a href="CV_Setareh_Babajani.pdf" download="Setareh_Babajani.pdf">Download my CV</a>
+							<a href="CV_Setareh_Babajani.pdf" download="Setareh_babajani.pdf" class="button large scrolly">Download my CV</a>
 						</div>
 					</div>
 				</div>
