add: add skill page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,44 @@
 				</div>
 			</article>
 
-		<!-- Work -->
+		<!-- Skills -->
+		<article id="skill" class="wrapper style2">
+			<div class="container">
+				<header>
+					<h2>Here's some of my skills</h2>
+					<!-- <p>Odio turpis amet sed consequat eget posuere consequat.</p> -->
+				</header>
+				<div class="row aln-center">
+					<div class="col-4 col-6-medium col-12-small">
+						<section class="box style1">
+							<!-- <span class="icon featured fa-comments"></span> -->
+							<h3>Programming Languages</h3>
+							<p> Python, Java, C, C++, C#, JS, SQL, HTML , CSS</p>
+						</section>
+					</div>
+					<div class="col-4 col-6-medium col-12-small">
+						<section class="box style1">
+							<!-- <span class="icon solid featured fa-camera-retro"></span> -->
+							<h3>Libraries and Frameworks</h3>
+							<p>  Pytorch, Keras, TensorFlow, Scikit-Learn, Numpy, React JS</p>
+						</section>
+					</div>
+					<div class="col-4 col-6-medium col-12-small">
+						<section class="box style1">
+							<!-- <span class="icon featured fa-thumbs-up"></span> -->
+							<h3>Environments and Tools</h3>
+							<p> Git, Postman, Azure Devops, Linux (Ubuntu)</p>
+						</section>
+					</div>
+				</div>
+				<!-- <footer>
+					<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+					<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+				</footer> -->
+			</div>
+		</article>
+
+		<!-- Projects -->
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
@@ -81,7 +118,7 @@
 				</div>
 			</article>
 
-		<!-- Portfolio -->
+		<!-- Certificates -->
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
