add: add project page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 				<ul class="container">
 					<li><a href="#top">Top</a></li>
 					<li><a href="#skill">Skills</a></li>
-					<li><a href="#work">Projects</a></li>
-					<li><a href="#portfolio">Certificates</a></li>
+					<li><a href="#project">Projects</a></li>
+					<li><a href="#certificate">Certificates</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -56,21 +56,21 @@
 						<section class="box style1">
 							<!-- <span class="icon featured fa-comments"></span> -->
 							<h3>Programming Languages</h3>
-							<p> Python, Java, C, C++, C#, JS, SQL, HTML , CSS</p>
+							<p>Python, Java, C, C++, C#, JS, SQL, HTML , CSS</p>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<!-- <span class="icon solid featured fa-camera-retro"></span> -->
 							<h3>Libraries and Frameworks</h3>
-							<p>  Pytorch, Keras, TensorFlow, Scikit-Learn, Numpy, React JS</p>
+							<p>Pytorch, Keras, TensorFlow, Scikit-Learn, Numpy, React JS</p>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<!-- <span class="icon featured fa-thumbs-up"></span> -->
 							<h3>Environments and Tools</h3>
-							<p> Git, Postman, Azure Devops, Linux (Ubuntu)</p>
+							<p>Git, Postman, Azure Devops, Linux (Ubuntu)</p>
 						</section>
 					</div>
 				</div>
@@ -82,44 +82,63 @@
 		</article>
 
 		<!-- Projects -->
-			<article id="work" class="wrapper style2">
+			<article id="project" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<h2>Here's all the academic projects I do.</h2>
+						<!-- <p>Odio turpis amet sed consequat eget posuere consequat.</p> -->
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<!-- <span class="icon featured fa-comments"></span> -->
+								<h3>NoWaste</h3>
+								<p>It’s an application for preventing the wastage of unsold food in restaurants and cafes. The application was developed with Scrum Methodology and I contributed to the front-end of it.</p>
+								<a href="https://github.com/setarehbabajani/NoWaste_FrontEnd" class="button scrolly">Access to the front codes.</a>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<!-- <span class="icon solid featured fa-camera-retro"></span> -->
+								<h3>Anti-Spoofing algorithm for checking the liveliness of faces in videoes</h3>
+								<p>The project was for checking whether a face in the video is alive or not. In this project, two different models, including a feature-based and a deep learning model, were used.</p>
+								<a href="https://github.com/setarehbabajani/Computer-Vision-IUST/tree/main/Final-Project" class="button scrolly">Access to the codes.</a>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<!-- <span class="icon featured fa-thumbs-up"></span> -->
+								<h3>Sentiment Analysis in Persian texts</h3>
+								<p> In this project, DistilBert model and different pre-processing methods like normalization, stemming, spell checking, and vectorization were used.</p>
+								<a href="https://github.com/setarehbabajani/Deep-Learning-IUST/tree/main/Sentiment-Analysis-Project" class="button scrolly">Access to the codes.</a>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<!-- <span class="icon featured fa-thumbs-up"></span> -->
+								<h3>RAGs</h3>
+								<p>The first RAG project is for Chatbot for a website’s FAQ which compares the result of three different generative models and the second one is for organizational reports which use gpt2 in generation time.</p>
+								<a href="https://github.com/setarehbabajani/" class="button scrolly">Access to the codes.</a>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<!-- <span class="icon featured fa-thumbs-up"></span> -->
+								<h3>Theory of Languages and Automata Proejcts</h3>
+								<p>Implementing turing-machine, PDA-calculato, string-belongs-to-finite-automatar.</p>
+								<a href="https://github.com/setarehbabajani/" class="button scrolly">Access to the codes.</a>
 							</section>
 						</div>
 					</div>
-					<footer>
+					<!-- <footer>
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-					</footer>
+					</footer> -->
 				</div>
 			</article>
 
 		<!-- Certificates -->
-			<article id="portfolio" class="wrapper style3">
+			<article id="certificate" class="wrapper style3">
 				<div class="container">
 					<header>
 						<h2>Here’s some stuff I made recently.</h2>
