add: edit project page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<section class="box style1">
 							<!-- <span class="icon featured fa-thumbs-up"></span> -->
 							<h3>Environments and Tools</h3>
-							<p>Git, Postman, Azure Devops, Linux (Ubuntu)</p>
+							<p>Git, Postman, Azure Devops, Linux</p>
 						</section>
 					</div>
 				</div>
@@ -85,7 +85,7 @@
 			<article id="project" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Here's all the academic projects I do.</h2>
+						<h2>Here's some of the academic projects I do.</h2>
 						<!-- <p>Odio turpis amet sed consequat eget posuere consequat.</p> -->
 					</header>
 					<div class="row aln-center">
@@ -95,6 +95,14 @@
 								<h3>NoWaste</h3>
 								<p>It’s an application for preventing the wastage of unsold food in restaurants and cafes. The application was developed with Scrum Methodology and I contributed to the front-end of it.</p>
 								<a href="https://github.com/setarehbabajani/NoWaste_FrontEnd" class="button scrolly">Access to the front codes.</a>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<!-- <span class="icon featured fa-thumbs-up"></span> -->
+								<h3>Theory of Languages and Automata Proejcts</h3>
+								<p>Implementing turing-machine, PDA-calculato, string-belongs-to-finite-automatar.</p>
+								<a href="https://github.com/setarehbabajani/" class="button scrolly">Access to the codes.</a>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -118,14 +126,6 @@
 								<!-- <span class="icon featured fa-thumbs-up"></span> -->
 								<h3>RAGs</h3>
 								<p>The first RAG project is for Chatbot for a website’s FAQ which compares the result of three different generative models and the second one is for organizational reports which use gpt2 in generation time.</p>
-								<a href="https://github.com/setarehbabajani/" class="button scrolly">Access to the codes.</a>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<!-- <span class="icon featured fa-thumbs-up"></span> -->
-								<h3>Theory of Languages and Automata Proejcts</h3>
-								<p>Implementing turing-machine, PDA-calculato, string-belongs-to-finite-automatar.</p>
 								<a href="https://github.com/setarehbabajani/" class="button scrolly">Access to the codes.</a>
 							</section>
 						</div>
