add: edit project page

--- a/index.html
+++ b/index.html
@@ -85,16 +85,15 @@
 			<article id="project" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Here's some of the academic projects I do.</h2>
+						<h2>Here's some of the academic projects I do</h2>
 						<!-- <p>Odio turpis amet sed consequat eget posuere consequat.</p> -->
 					</header>
-					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<!-- <span class="icon featured fa-comments"></span> -->
-								<h3>NoWaste</h3>
-								<p>It’s an application for preventing the wastage of unsold food in restaurants and cafes. The application was developed with Scrum Methodology and I contributed to the front-end of it.</p>
-								<a href="https://github.com/setarehbabajani/NoWaste_FrontEnd" class="button scrolly">Access to the front codes.</a>
+								<!-- <span class="icon featured fa-thumbs-up"></span> -->
+								<h3>Sentiment Analysis in Persian texts</h3>
+								<p> In this project, DistilBert model and different pre-processing methods like normalization, stemming, spell checking, and vectorization were used.</p>
+								<a href="https://github.com/setarehbabajani/Deep-Learning-IUST/tree/main/Sentiment-Analysis-Project" class="button scrolly">Access to the codes.</a>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -105,14 +104,15 @@
 								<a href="https://github.com/setarehbabajani/" class="button scrolly">Access to the codes.</a>
 							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<!-- <span class="icon featured fa-thumbs-up"></span> -->
-								<h3>Sentiment Analysis in Persian texts</h3>
-								<p> In this project, DistilBert model and different pre-processing methods like normalization, stemming, spell checking, and vectorization were used.</p>
-								<a href="https://github.com/setarehbabajani/Deep-Learning-IUST/tree/main/Sentiment-Analysis-Project" class="button scrolly">Access to the codes.</a>
-							</section>
-						</div>
+						<div class="row aln-center">
+							<div class="col-4 col-6-medium col-12-small">
+								<section class="box style1">
+									<!-- <span class="icon featured fa-comments"></span> -->
+									<h3>NoWaste</h3>
+									<p>It’s an application for preventing the wastage of unsold food in restaurants and cafes. The application was developed with Scrum Methodology and I contributed to the front-end of it.</p>
+									<a href="https://github.com/setarehbabajani/NoWaste_FrontEnd" class="button scrolly">Access to the front codes.</a>
+								</section>
+							</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<!-- <span class="icon solid featured fa-camera-retro"></span> -->
