--- a/index.html
+++ b/index.html
@@ -49,35 +49,27 @@
 			<div class="container">
 				<header>
 					<h2>Here's some of my skills</h2>
-					<!-- <p>Odio turpis amet sed consequat eget posuere consequat.</p> -->
 				</header>
 				<div class="row aln-center">
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
-							<!-- <span class="icon featured fa-comments"></span> -->
 							<h3>Programming Languages</h3>
 							<p>Python, Java, C, C++, C#, JS, SQL, HTML , CSS</p>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
-							<!-- <span class="icon solid featured fa-camera-retro"></span> -->
 							<h3>Libraries and Frameworks</h3>
 							<p>Pytorch, Keras, TensorFlow, Scikit-Learn, Numpy, React JS</p>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
-							<!-- <span class="icon featured fa-thumbs-up"></span> -->
 							<h3>Environments and Tools</h3>
 							<p>Git, Postman, Azure Devops, Linux</p>
 						</section>
 					</div>
 				</div>
-				<!-- <footer>
-					<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-					<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-				</footer> -->
 			</div>
 		</article>
 
@@ -85,12 +77,25 @@
 			<article id="project" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Here's some of the academic projects I do</h2>
-						<!-- <p>Odio turpis amet sed consequat eget posuere consequat.</p> -->
+						<h2>Here's some of the academic projects I do.</h2>
 					</header>
+					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<!-- <span class="icon featured fa-thumbs-up"></span> -->
+								<h3>NoWaste</h3>
+								<p>It’s an application for preventing the wastage of unsold food in restaurants and cafes. The application was developed with Scrum Methodology and I contributed to the front-end of it.</p>
+								<a href="https://github.com/setarehbabajani/NoWaste_FrontEnd" class="button scrolly">Access to the front codes.</a>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<h3>Theory of Languages and Automata Proejcts</h3>
+								<p>Implementing turing-machine, PDA-calculato, string-belongs-to-finite-automatar.</p>
+								<a href="https://github.com/setarehbabajani/" class="button scrolly">Access to the codes.</a>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
 								<h3>Sentiment Analysis in Persian texts</h3>
 								<p> In this project, DistilBert model and different pre-processing methods like normalization, stemming, spell checking, and vectorization were used.</p>
 								<a href="https://github.com/setarehbabajani/Deep-Learning-IUST/tree/main/Sentiment-Analysis-Project" class="button scrolly">Access to the codes.</a>
@@ -98,42 +103,21 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<!-- <span class="icon featured fa-thumbs-up"></span> -->
-								<h3>Theory of Languages and Automata Proejcts</h3>
-								<p>Implementing turing-machine, PDA-calculato, string-belongs-to-finite-automatar.</p>
-								<a href="https://github.com/setarehbabajani/" class="button scrolly">Access to the codes.</a>
-							</section>
-						</div>
-						<div class="row aln-center">
-							<div class="col-4 col-6-medium col-12-small">
-								<section class="box style1">
-									<!-- <span class="icon featured fa-comments"></span> -->
-									<h3>NoWaste</h3>
-									<p>It’s an application for preventing the wastage of unsold food in restaurants and cafes. The application was developed with Scrum Methodology and I contributed to the front-end of it.</p>
-									<a href="https://github.com/setarehbabajani/NoWaste_FrontEnd" class="button scrolly">Access to the front codes.</a>
-								</section>
-							</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<!-- <span class="icon solid featured fa-camera-retro"></span> -->
 								<h3>Anti-Spoofing algorithm for checking the liveliness of faces in videoes</h3>
 								<p>The project was for checking whether a face in the video is alive or not. In this project, two different models, including a feature-based and a deep learning model, were used.</p>
 								<a href="https://github.com/setarehbabajani/Computer-Vision-IUST/tree/main/Final-Project" class="button scrolly">Access to the codes.</a>
 							</section>
 						</div>
+
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<!-- <span class="icon featured fa-thumbs-up"></span> -->
 								<h3>RAGs</h3>
 								<p>The first RAG project is for Chatbot for a website’s FAQ which compares the result of three different generative models and the second one is for organizational reports which use gpt2 in generation time.</p>
 								<a href="https://github.com/setarehbabajani/" class="button scrolly">Access to the codes.</a>
 							</section>
 						</div>
 					</div>
-					<!-- <footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-					</footer> -->
+
 				</div>
 			</article>
 
