add: add certificate page

--- a/index.html
+++ b/index.html
@@ -123,57 +123,53 @@
 			<article id="certificate" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>Here’s some of certificates I got</h2>
+						<p>For more certificates, you can visit my <a href="https://www.linkedin.com/in/setareh-babajani/" target="_blank">LinkedIn profile</a>.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="images/1.png" alt="" /></a>
+								<h3><a href="#">Deep Learning Specialization</a></h3>
+								<p> Includes courses on Neural Networks and Deep Learning, Machine Learning, Convolutional Neural Networks, Sequence Models.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Deep Learning and Trusworthiness in Deep Learning</a></h3>
+								<p>Covers many topics in Machine Learning, Deep Learning and trustworthiness in Deep Learning.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="images/3.png" alt="" /></a>
+								<h3><a href="#">Natural Language Processing with Classification and Vector Spaces</a></h3>
+								<p> Covers many topics in NLP and Data Preprocessing using Python.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="images/4.png" alt="" /></a>
+								<h3><a href="#">Convolutional Neural Networks</a></h3>
+								<p> Covers many topics about CNNs, object detection and face recognition.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="images/5.png" alt="" /></a>
+								<h3><a href="#">Algorithms on Graphs</a></h3>
+								<p>Includes courses on graphs, MST and ASP.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="images/6.png" alt="" /></a>
+								<h3><a href="#">Data Structures</a></h3>
+								<p>Includes courses on different data structures, hash tables and BST.</p>
 							</article>
 						</div>
 					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#contact" class="button large scrolly">Get in touch with me</a>
-					</footer>
 				</div>
 			</article>
 
