add: edit contact page

--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+								<li><a href="https://x.com/aTiredseti" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-instagram "><span class="label">Instagram</span></a></li> -->
 								<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 								<li><a href="https://www.linkedin.com/in/setareh-babajani/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<!-- <li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li> -->
+								<li><a href="mailto: setarehbabajani81@gmail.com" class="icon brands fa-google"><span class="label">Gmail</span></a></li>
 								<li><a href="https://github.com/setarehbabajani" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
@@ -202,11 +202,6 @@
 							<hr />
 						</div>
 					</div>
-					<!-- <footer>
-						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer> -->
 				</div>
 			</article>
 
