edit the certificates

--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
 								<p> Includes courses on Neural Networks and Deep Learning, Machine Learning, Convolutional Neural Networks, Sequence Models.</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<!-- <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 								<h3><a href="#">Deep Learning and Trusworthiness in Deep Learning</a></h3>
 								<p>Covers many topics in Machine Learning, Deep Learning and trustworthiness in Deep Learning.</p>
 							</article>
-						</div>
+						</div> -->
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/3.png" alt="" /></a>
