--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<header>
 								<h1>Hi. I'm <strong>Setareh Babajani</strong>.</h1>
 							</header>
-							<p>Welcome to my personal website! I am a dedicated student at the Iran University of Science and Technology, currently maintaining a stellar GPA of <strong>3.98/4.0</strong> (<strong>18.3/20.0</strong> on the Iranian Scale). In my last two years, I have achieved a perfect GPA of <strong>4.0/4.0</strong> (<strong>18.5/20.0</strong> on the Iranian Scale).</p>
+							<p>Welcome to my personal website! I am a graduate student at the Iran University of Science and Technology, currently maintaining a stellar GPA of <strong>3.97/4.0</strong> (<strong>18.55/20.0</strong> on the Iranian Scale). In my last two years, I have achieved a perfect GPA of <strong>4.0/4.0</strong> (<strong>18.46/20.0</strong> on the Iranian Scale).</p>
 							<p>I have a passion for collaboration and research, always eager to explore new ideas and innovations. My academic journey has been driven by curiosity and a commitment to excellence, which I bring into every project I undertake.</p>
 							<p>Feel free to explore my site to learn more about my academic achievements, skills, and collaborative efforts.</p>
 							<a href="CV_Setareh_Babajani.pdf" download="Setareh_babajani.pdf" class="button large scrolly">Download my CV</a>
@@ -134,13 +134,20 @@
 								<p> Includes courses on Neural Networks and Deep Learning, Machine Learning, Convolutional Neural Networks, Sequence Models.</p>
 							</article>
 						</div>
-						<!-- <div class="col-4 col-6-medium col-12-small">
+						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Deep Learning and Trusworthiness in Deep Learning</a></h3>
-								<p>Covers many topics in Machine Learning, Deep Learning and trustworthiness in Deep Learning.</p>
+								<a href="#" class="image featured"><img src="images/Intro-to-dl-ml.jpg" alt="" /></a>
+								<h3><a href="#">Introduction to Deep and Machine Learning</a></h3>
+								<p>Covers many topics in Machine Learning, Deep Learning.</p>
 							</article>
-						</div> -->
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="images/Trustworthiness.jpg" alt="" /></a>
+								<h3><a href="#">Trustworthiness in Deep Learning</a></h3>
+								<p>Covers topics in Deep Learning and trustworthiness in Deep Learning.</p>
+							</article>
+						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/3.png" alt="" /></a>
